<resources>
    <string name="app_name" translatable="false">Snail</string>
    <string name="bg" translatable="false">Background</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="next">Next</string>
    <string name="onboard_tv1" translatable="false">استشارتك بخطوات بسيطة..</string>
    <string name="onboard_tv2" translatable="false">احصل على استشارتك الآن بكل سهولة</string>
    <string name="onboard_tv3" translatable="false">اطلب ما تحتاجه لحيوانك..</string>
    <string name="onboard_tv4" translatable="false">كل ما تحتاجه من منتجات لحيوانك بسعر مناسب</string>
    <string name="back_icon" translatable="false">Back Icon</string>
    <string name="welcome_in_snail">Welcome in Snail</string>
    <string name="login">Login</string>
    <string name="enter_as_visitor">Enter as Visitor</string>
    <string name="member_login">Member Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_type">Login Type</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="short_pass">Password is too short</string>
    <string name="password_not_match">Passwords Not Match</string>
    <string name="phone_already_exists">Phone Already Exists</string>
    <string name="phone_num_problem">There is a problem with the phone number</string>
    <string name="profile_updated_successfully">profile updated successfully</string>
    <string name="password_updated_successfully">password_updated_successfully</string>
    <string name="choose_rate">Please Choose Rate</string>
    <string name="name_is_required">Name is required</string>
    <string name="verification_code_is_required">Verification code is required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_terms_conditions"><![CDATA[Agree Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="new_register">New Register</string>
    <string name="confirm">Confirm</string>
    <string name="phone_is_required">Phone number is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_msg">Enter Verification Code You\'ve Received</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password_msg">Enter Your Phone Number to Receive a Verification Code</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="my_consultants">My Consultants</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_by_clinic">Search by Clinic</string>
    <string name="filter">Filter</string>
    <string name="location">Location</string>
    <string name="veterinary_clinic">Veterinary Clinic</string>
    <string name="top_rated_veterinary_clinics">Top Rated Clinics</string>
    <string name="loading">Loading</string>
    <string name="error_location_address">Unknown Location</string>
    <string name="enable_gps_msg">Please Enable GPS to Find Nearest Clinics</string>
    <string name="accept">Accept</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="search_by_rating">Search by Rating</string>
    <string name="top_rated">Top Rated</string>
    <string name="average_rating">Average Rating</string>
    <string name="lowest_rated">Lowest Rated</string>
    <string name="apply">Apply</string>
    <string name="about_us">About Us</string>
    <string name="my_animals">My Animals</string>
    <string name="ntifications">Notifications</string>
    <string name="suggestions">Suggestions</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="t_amp_c"><![CDATA[T & C]]></string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="vipet_s_clinic">Vipet\'s Clinic</string>
    <string name="specialties">Specialties</string>
    <string name="internally">internally</string>
    <string name="nutrition">nutrition</string>
    <string name="teeth">teeth</string>
    <string name="chest">chest</string>
    <string name="eyes">eyes</string>
    <string name="bones">bones</string>
    <string name="reviews">Reviews</string>
    <string name="consultation_request">Consultation Request</string>
    <string name="make_a_review">Make A Review</string>
    <string name="login_first_to_complete_your_order">Login First to complete your order</string>
    <string name="make_a_reservation">make a reservation</string>
    <string name="type_of_counseling">type of counseling</string>
    <string name="star">*</string>
    <string name="consultation_date">Consultation date</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="consultation_time">Consultation time</string>
    <string name="home_address">Home Address</string>
    <string name="registered_animals">Registered animals</string>
    <string name="add_new_animal">Add New Animal</string>
    <string name="consultation_details">Consultation details</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_cancel_the_reservation">Are you sure you want to cancel the reservation?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="the_application_has_been_sent_to_the_doctor_and_is_awaiting_approval">The application has been sent to the doctor and is awaiting approval</string>
    <string name="ok">OK</string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="bank_name">Bank Name</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry date</string>
    <string name="pay">Pay</string>
    <string name="payment_completed_successfully">Payment completed successfully</string>
    <string name="bill">Bill</string>
    <string name="try_again">Try Again</string>
    <string name="an_error_occurred_in_the_payment_process">An error occurred in the payment process</string>
    <string name="receipt">Receipt</string>
    <string name="transaction_data">Transaction data</string>
    <string name="receipt_date">receipt date</string>
    <string name="transaction_date">Transaction date:</string>
    <string name="processing_time1">processing time:</string>
    <string name="transaction_code1">Transaction code:</string>
    <string name="payment_amount1">payment amount:</string>
    <string name="account_number">account number:</string>
    <string name="done">Done</string>
    <string name="clinic_rate">Clinic Rate</string>
    <string name="notes">Notes</string>
    <string name="save_review">Save Review</string>
    <string name="complaint_mail">Complaint mail</string>
    <string name="suggestion_mail">Suggestion mail</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_delete_the_account">Are you sure you want to delete the account?</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="t_c">تطبيق استشارات بيطرية يهدف الى توصيل العملاء بالعيادات البيطرية و متجر الادوية لتسهيل عملية الاستشارة للعميل و سهولة طلب الادوية و الحصول عليها تطبيق استشارات بيطرية يهدف الى توصيل العملاء بالعيادات البيطرية و متجر الادوية لتسهيل عملية الاستشارة للعميل و سهولة طلب الادوية و الحصول عليها تطبيق استشارات بيطرية يهدف الى توصيل العملاء بالعيادات البيطرية و متجر الادوية لتسهيل عملية الاستشارة للعميل و سهولة طلب الادوية و الحصول عليها</string>
    <string name="language">Language</string>
    <string name="ar">عربى</string>
    <string name="en">EN</string>
    <string name="animal_type">animal type</string>
    <string name="another_type">another type</string>
    <string name="type">type</string>
    <string name="name_of_the_animal">name of the animal</string>
    <string name="animal_gender">animal gender</string>
    <string name="animal_age">animal age</string>
    <string name="animal_weight">animal weight</string>
    <string name="animal_picture">Animal Picture</string>
    <string name="previous_reports">Previous Reports</string>
    <string name="consultation_date1">Consultation date:</string>
    <string name="report_content">report content:</string>
    <string name="descriptions">descriptions</string>
    <string name="vaccination_booklet">vaccination booklet</string>
    <string name="add_vaccination">add vaccination</string>
    <string name="date_of_vaccination">date of vaccination:</string>
    <string name="vaccination_name">Vaccination name:</string>
    <string name="another_vaccination">Another vaccination</string>
    <string name="vaccination">Vaccination</string>
    <string name="vaccination_date1">Vaccination date</string>
    <string name="previous_consultation">Previous Consultation</string>
    <string name="oreder_date">Order Date</string>
    <string name="order_date">Order Date:</string>
    <string name="clinic_name">Clinic Name:</string>
    <string name="type_of_counseling2">type of counseling:</string>
    <string name="consultation_data">Consultation data</string>
    <string name="clinic_data">Clinic data</string>
    <string name="reserved_specialty">reserved specialty:</string>
    <string name="clinic_report">Clinic report:</string>
    <string name="new_consultation">New Consultation</string>
    <string name="pending_consultation">pending consultation</string>
    <string name="hello_what_do_you_want">Hello, what do you want?</string>
    <string name="pharmacy">pharmacy</string>
    <string name="store1">Store</string>
    <string name="product_type">Product Type</string>
    <string name="animal_foods">animal foods</string>
    <string name="trade_mark">trade mark :</string>
    <string name="flavor">Flavor:</string>
    <string name="product_shape">Product shape:</string>
    <string name="weight">weight:</string>
    <string name="expiry_date1">expiry date:</string>
    <string name="add_to_cart">add to cart</string>
    <string name="products">Products</string>
    <string name="receipt1">receipt</string>
    <string name="total_price_of_products">Total price of products:</string>
    <string name="complete_the_order">Complete the order</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_data">Delivery data</string>
    <string name="delivery_service">Delivery Service:</string>
    <string name="total">Total:</string>
    <string name="your_request_has_been_completed_successfully">Your request has been completed successfully</string>
    <string name="back_to_the_store">Back to the store</string>
    <string name="my_orders">My Orders</string>
    <string name="previous_order">previous order</string>
    <string name="previous_order_details">Previous order details</string>
    <string name="electronic">electronic</string>
</resources>