<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_info_square"
            android:title="@string/about_us" />
    </group>

    <group>
        <item
            android:id="@+id/myAnimals"
            android:icon="@drawable/ic_pets"
            android:title="@string/my_animals" />
    </group>
    <group>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>

    <group>
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/ntifications" />
    </group>

    <group>
        <item
            android:id="@+id/suggestion"
            android:icon="@drawable/ic_message"
            android:title="@string/suggestions" />
    </group>

    <group>
        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_pet_cart"
            android:title="@string/cart" />
    </group>

    <group>
        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders" />

    </group>
    <group>
        <item
            android:id="@+id/t_c"
            android:icon="@drawable/ic_doc"
            android:title="@string/t_amp_c" />

    </group>

    <group>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />

    </group>



    <item
        android:id="@+id/logout_menu"
        android:title="@null"
        app:actionLayout="@layout/logout_menu" />
</menu>