<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_170sdp"
    android:background="@drawable/toolbar_bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/logo" />

    <ImageView
        android:id="@+id/back_img"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/back_icon"
        android:focusable="true"
        android:padding="@dimen/_4sdp"
        android:scaleX="-1"
        android:src="@drawable/ic_back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/welcome_in_snail"
        android:textColor="@color/brown"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="@+id/title_tv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>