<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_border_radius_12"
    android:backgroundTint="@color/brown"
    android:elevation="@dimen/_12sdp"
    tools:context=".ui.main.fragments.sheets.SearchSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/top_border_radius_12"
        android:backgroundTint="@color/white">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_rating"
            android:textColor="@color/brown"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_back"
            android:scaleX="-1"
            android:padding="@dimen/_4sdp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginHorizontal="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@id/title_tv"
            app:layout_constraintTop_toTopOf="@id/title_tv"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_36sdp"
            app:layout_constraintTop_toBottomOf="@id/title_tv">

            <RadioButton
                android:id="@+id/top_rated_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:checked="true"
                android:buttonTint="@color/brown"/>

            <RadioButton
                android:id="@+id/avg_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_rating"
                android:buttonTint="@color/brown"/>

            <RadioButton
                android:id="@+id/lowest_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowest_rated"
                android:buttonTint="@color/brown"/>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@color/beige"
            app:cornerRadius="@dimen/_8sdp"
            android:text="@string/apply"
            android:textColor="@color/brown"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            app:layout_constraintTop_toBottomOf="@id/rg"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>