<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_raduis_fragments"
    tools:context=".ui.main.fragments.payment.PaymentFragment">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:rotation="180"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/payment"
        android:textColor="@color/brown"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pay_bg"
        android:gravity="center"
        android:text="150 ريال"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RelativeLayout
        android:id="@+id/rl_bank"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/full_border_radius_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@string/username"
            android:src="@drawable/ic_bank"
            app:tint="@color/beige" />

        <ImageView
            android:id="@+id/arrow1"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/username"
            android:src="@drawable/ccp_ic_arrow_drop_down"
            app:tint="@color/beige" />

        <EditText
            android:id="@+id/bank_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/icon1"
            android:background="@null"
            android:hint="@string/bank_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/beige"
            android:textDirection="ltr" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_card_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/full_border_radius_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_bank">

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@string/username"
            android:src="@drawable/ic_icon_awesome_id_card"
            app:tint="@color/beige" />


        <EditText
            android:id="@+id/card_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/icon2"
            android:background="@null"
            android:hint="@string/card_holder_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/beige"
            android:textDirection="ltr" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_card_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/full_border_radius_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_card_name">

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@string/username"
            android:src="@drawable/ic_icon_awesome_id_card"
            app:tint="@color/beige" />


        <EditText
            android:id="@+id/card_num_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/icon3"
            android:background="@null"
            android:hint="@string/card_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/beige"
            android:textDirection="ltr" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_card_num">

        <EditText
            android:id="@+id/card_sec_et"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/full_border_radius_8"
            android:gravity="center"
            android:hint="@string/cvv"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textColorHint="@color/beige"
            android:textDirection="ltr" />

        <EditText
            android:id="@+id/card_expiry_date_et"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/full_border_radius_8"
            android:gravity="center"
            android:hint="@string/expiry_date"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textColorHint="@color/beige"
            android:textDirection="ltr" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_8sdp"
        app:cornerRadius="@dimen/_8sdp"
        android:backgroundTint="@color/beige"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/brown"
        android:textAllCaps="false"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>